Attachment view help toggle fix.
Earlier the expanded help text overlapped the title.

--- a/resources/private/common-html/sass/partials/_help.scss
+++ b/resources/private/common-html/sass/partials/_help.scss
@@ -20,7 +20,8 @@
   }
 }
 
-.stacked.help-toggle {
+.stacked.help-toggle,
+.stacked.help-toggle div {
   overflow-y: visible;
 }
 
